# WebServer

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  tox.ini
server/: __init__.py  __main__.py  config_loader.py  constants.py  http_response.py  model.py  server.py
tests/: test_config.py  test_response.py  test_server.py
