[project]
name = "WebServer"
version = "0.0.1"
description = "project for python task"


[tool.poetry]
authors = ["Alex Spirin"]


[tool.poetry.dependencies]
python = ">=3.12, <4.0"
mypy = "^1.15.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pydantic = "^2.11.7"
flake8-pyproject = "^1.2.3"
loguru = "^0.7.3"
aiohttp = "^3.12.4"


[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true


[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]


[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv"]
show-source = true


[tool.mypy]
# 🐍 Версия Python
python_version = 3.12

# ✅ Активируем конкретные коды ошибок
enable_error_code = ["truthy-bool", "ignore-without-code"]

# 🔎 Проверка неаннотированных функций
check_untyped_defs = true

# ⚙️ Строгие правила типизации
strict_optional = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

# ⚠️ Предупреждения
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true

# 💡 Вывод ошибок
show_error_codes = true
show_column_numbers = true
pretty = true

# 📦 Работа с импортами
ignore_missing_imports = true
follow_imports = "normal"
follow_imports_for_stubs = true
