[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "web_server"
version = "0.0.1"
description = "project for python task"
readme = "README.md"
authors = ["Alex Spirin"]
packages = [{ include = "server" }]

[tool.poetry.dependencies]
aiohttp = "~3.12.4"
pydantic = "~2.11.7"
loguru = "~0.7.3"
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
mypy = "~1.15.0"
pre-commit = "~4.2.0"
ruff = "~0.6.9"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.12"
enable_error_code = ["truthy-bool", "ignore-without-code"]
check_untyped_defs = true
strict_optional = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
follow_imports = "normal"
follow_imports_for_stubs = true